- PR#6776: Failure to kill the "tick" thread, segfault when exiting the runtime
- PR#6752: Extensible variant types and scope escaping
- PR#6808: the parsing of OCAMLRUNPARAM is too lax
  (Damien Doligez)
- PR#6874: Inefficient code generated for module function arguments
- PR#6897: Bad error message for some pattern matching on extensible variants

Features wishes:
- PR#4714: List.cons
- PR#5418 (comments) : generate dependencies with $(CC) instead of gcc
- PR#6167: OCAMLPARAM support for disabling PIC generation ("pic=0")
  (Gabor Pali)
- PR#6367: introduce Asttypes.arg_label to encode labelled arguments
- PR#6452, GPR#140: add internal suport for custom printing formats
  (Jérémie Dimino)
- PR#6611: remove the option wrapper on optional arguments in the syntax tree
- PR#6635: support M.[], M.(), M.{< >} and M.[| |]
  (Jeremy Yallop, review by Gabriel Radanne)
- PR#6691: install .cmt[i] files for stdlib and compiler-libs
  (David Sheets, request by Gabriel Radanne)
- PR#6742: remove duplicate virtual_flag information from Tstr_class
- PR#6719: improve Buffer.add_channel when not enough input is available
  (Simon Cruanes)
* PR#6816: reject integer and float literals followed by alphanum
  (Hugo Heuzard)
- PR#6876: improve warning 6 by listing the omitted labels.
  (Eyyüb Sari)
- GPR#111: `(f [@taillcall]) x y` warns if `f x y` is not a tail-call
  (Simon Cruanes)
- GPR#118: ocamldep -allow-approx: fallback to a lexer-based approximation
  (Frédéric Bour)
- GPR#137: add untypeast.ml (in open recursion style) to compiler-libs
  (Gabriel Radanne)
- GPR#142: add a CAMLdrop macro for undoing CAMLparam*/CAMLlocal*
- GPR#145: speeedup bigarray access by optimizing Cmmgen.bigarray_indexing
  (Vladimir Brankov, review by Gabriel Scherer)
- GPR#147: [type 'a result = Ok of 'a | Error of 'b] in Pervasives
  (Yaron Minsky)
- GPR#171: allow custom warning printers / catchers
  (Benjamin Canou, review by Damien Doligez)
- GPR#191: Making gc.h and some part of memory.h public